// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityPostRepliesComponent should show community post replies 1`] = `
<pf-community-post-replies
  loading="false"
  replies={[Function Array]}
>
  <div
    class="mt-2"
  >
    
    
    
    <div
      class="reply-offset"
    >
      No Replies
    </div>
  </div>
</pf-community-post-replies>
`;

exports[`CommunityPostRepliesComponent should show community post replies loading indicator 1`] = `
<pf-community-post-replies
  loading={[Function Boolean]}
  replies={[Function Array]}
>
  <div
    class="mt-2"
  >
    
    
    <pf-loading-indicator
      class="loading-indicator reply-offset"
    />
    
  </div>
</pf-community-post-replies>
`;
